--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,7 @@ section{
 
     background-color: white;
     width: 300px;
-    height: 500px;
+    height: 550px;
     border-radius: 20px;
     box-shadow:0px 1px 10px rgba(0, 0, 0, 0.366);
     display: block;
@@ -59,6 +59,60 @@ div#formulario{
     text-align: center;
     font-size:15px;
 }
-#campo{
+.campo{
+    background-color:#373F51 ;
+    width: 95%;
+    border-radius: 5PX;
+    margin: auto;
+    margin-bottom:5px;
+    color: aliceblue;
+    text-align: center;
+    height:40px
+     ;
     
+}
+label{
+    display: none;
+}
+
+input[type=submit]{
+    
+    height: 40px;
+    margin: auto;
+    display: block;
+    font-size: 1em;
+    width:95% ;
+    background:rgb(255, 255, 255);
+    color: rgb(15, 71, 238);
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+    margin-bottom: 7px;
+
+}
+input[type=submit]:hover{
+    background-color: #191c24;
+    color: white;
+
+}
+a {
+    
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1em;
+    width:95% ;
+    background-color:white;
+    height: 40px;
+    margin: auto;
+    border-radius: 5px;
+    color: rgb(15, 71, 238);
+    border: 1px solid  #191c24;
+    
+
+}
+a:hover{
+    background-color:  #191c24;
+    color: white;
+
 }
