--- a/estilos/midiastyle.css
+++ b/estilos/midiastyle.css
@@ -66,9 +66,10 @@
 
     }
     .braw{
-       
+        width: 470px;
         float: left;
         margin: auto;
+        margin: 55px 9px;
     }
    
 
