--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,16 +39,18 @@ section{
 
 }
 
-div#imag{
+#imag{
+    display: block;
   background:black url(../imagens/pexels-dinnow-9444476.jpg) no-repeat;
     height: 200px;
     background-size:cover;
     background-position: left top;
  
 }
-div#formulario{
-    padding: 20px;
+#formulario{
     display: block;
+    padding: 20px;
+   
 }
 
 #formulario h1{
